--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "semantic-ui-react": "^0.88.2"
   },
   "devDependencies": {
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "eslint": "^6.8.0",
