--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-plugin-sharp": "^2.6.1",
+    "gatsby-plugin-sharp": "^2.6.22",
     "gatsby-plugin-typescript": "^2.4.2",
     "gatsby-remark-autolink-headers": "^2.3.11",
+    "gatsby-remark-images": "^3.3.21",
     "gatsby-source-filesystem": "^2.3.19",
     "gatsby-transformer-remark": "^2.8.25",
     "gatsby-transformer-sharp": "^2.5.1",
