--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "version": "0.1.0",
   "author": "Floris De Feyter",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.14",
+    "@mdx-js/react": "^1.6.14",
     "csstype": "^2.6.10",
     "gatsby": "^2.21.13",
     "gatsby-image": "^2.4.1",
     "gatsby-plugin-manifest": "^2.4.2",
+    "gatsby-plugin-mdx": "^1.2.29",
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sass": "^2.3.12",
