--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.14",
     "@mdx-js/react": "^1.6.14",
+    "@types/typography": "^0.16.3",
     "csstype": "^2.6.10",
     "gatsby": "^2.21.13",
     "gatsby-image": "^2.4.1",
@@ -17,6 +18,7 @@
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.22",
     "gatsby-plugin-typescript": "^2.4.2",
+    "gatsby-plugin-typography": "^2.5.10",
     "gatsby-remark-autolink-headers": "^2.3.11",
     "gatsby-remark-images": "^3.3.21",
     "gatsby-source-filesystem": "^2.3.19",
@@ -27,8 +29,10 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-typography": "^0.16.19",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "@types/react": "^16.9.35",
