--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "gatsby-plugin-typescript": "^2.4.2",
     "gatsby-remark-autolink-headers": "^2.3.11",
     "gatsby-remark-images": "^3.3.21",
+    "gatsby-remark-katex": "^3.3.10",
     "gatsby-source-filesystem": "^2.3.19",
-    "gatsby-transformer-remark": "^2.8.25",
+    "gatsby-transformer-remark": "^2.8.27",
     "gatsby-transformer-sharp": "^2.5.1",
+    "katex": "^0.12.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
