--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@material-ui/core": "^4.11.0",
     "@mdx-js/mdx": "^1.6.14",
     "@mdx-js/react": "^1.6.14",
+    "@types/styled-components": "^5.1.1",
     "@types/typography": "^0.16.3",
+    "babel-plugin-styled-components": "^1.10.7",
     "csstype": "^2.6.10",
     "gatsby": "^2.21.13",
     "gatsby-image": "^2.4.1",
@@ -19,6 +21,7 @@
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.22",
+    "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-typescript": "^2.4.2",
     "gatsby-plugin-typography": "^2.5.10",
     "gatsby-remark-autolink-headers": "^2.3.11",
@@ -34,6 +37,7 @@
     "react-typography": "^0.16.19",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
+    "styled-components": "^5.1.1",
     "typography": "^0.16.19"
   },
   "devDependencies": {
