--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.0",
     "@mdx-js/mdx": "^1.6.14",
     "@mdx-js/react": "^1.6.14",
+    "@types/mdx-js__react": "^1.5.2",
     "@types/styled-components": "^5.1.1",
     "@types/typography": "^0.16.3",
     "babel-plugin-styled-components": "^1.10.7",
