--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@mdx-js/react": "^1.6.14",
     "@types/mdx-js__react": "^1.5.2",
     "@types/styled-components": "^5.1.1",
-    "@types/typography": "^0.16.3",
     "babel-plugin-styled-components": "^1.10.7",
     "csstype": "^2.6.10",
+    "fontsource-quicksand": "^2.2.6",
     "gatsby": "^2.21.13",
     "gatsby-image": "^2.4.1",
     "gatsby-plugin-manifest": "^2.4.2",
@@ -25,7 +25,6 @@
     "gatsby-plugin-sharp": "^2.6.22",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-typescript": "^2.4.2",
-    "gatsby-plugin-typography": "^2.5.10",
     "gatsby-remark-autolink-headers": "^2.3.11",
     "gatsby-remark-images": "^3.3.21",
     "gatsby-remark-katex": "^3.3.10",
@@ -38,11 +37,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "react-typography": "^0.16.19",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "styled-components": "^5.1.1",
-    "typography": "^0.16.19"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.35",
