--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mdx-js/mdx": "^1.6.14",
     "@mdx-js/react": "^1.6.14",
     "@types/mdx-js__react": "^1.5.2",
+    "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.1",
     "babel-plugin-styled-components": "^1.10.7",
     "csstype": "^2.6.10",
