--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fontsource-quicksand": "^2.2.6",
     "gatsby": "^2.21.13",
     "gatsby-image": "^2.4.1",
+    "gatsby-plugin-catch-links": "^2.3.14",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-mdx": "^1.2.29",
