--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.21.13",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-catch-links": "^2.3.14",
+    "gatsby-plugin-google-tagmanager": "^2.3.16",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-material-ui": "^2.1.10",
