--- a/package.json
+++ b/package.json
@@ -7,59 +7,69 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@mdx-js/mdx": "^1.6.18",
-    "@mdx-js/react": "^1.6.14",
-    "@types/mdx-js__react": "^1.5.2",
+    "@mdx-js/mdx": "^1.6.21",
+    "@mdx-js/react": "^1.6.21",
+    "@types/mdx-js__react": "^1.5.3",
     "@types/react-helmet": "^6.1.0",
-    "@types/styled-components": "^5.1.1",
-    "babel-plugin-styled-components": "^1.10.7",
-    "csstype": "^2.6.10",
+    "@types/styled-components": "^5.1.4",
+    "babel-plugin-styled-components": "^1.12.0",
+    "csstype": "^2.6.14",
     "fontsource-quicksand": "^2.2.6",
-    "gatsby": "^2.21.13",
-    "gatsby-image": "^2.4.20",
-    "gatsby-plugin-catch-links": "^2.3.14",
+    "gatsby": "^2.27.0",
+    "gatsby-image": "^2.6.0",
+    "gatsby-plugin-catch-links": "^2.5.0",
     "gatsby-plugin-gdpr-cookies": "^1.0.10",
-    "gatsby-plugin-google-tagmanager": "^2.3.16",
+    "gatsby-plugin-google-tagmanager": "^2.6.0",
     "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-manifest": "^2.4.2",
+    "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-material-ui": "^2.1.10",
-    "gatsby-plugin-mdx": "^1.2.29",
-    "gatsby-plugin-offline": "^3.2.1",
-    "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-plugin-sharp": "^2.6.22",
-    "gatsby-plugin-sitemap": "^2.6.0",
-    "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-plugin-typescript": "^2.4.2",
-    "gatsby-remark-autolink-headers": "^2.3.11",
-    "gatsby-remark-images": "^3.3.21",
-    "gatsby-remark-katex": "^3.3.10",
-    "gatsby-source-filesystem": "^2.3.19",
+    "gatsby-plugin-mdx": "^1.5.0",
+    "gatsby-plugin-offline": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^3.5.0",
+    "gatsby-plugin-sass": "^2.6.0",
+    "gatsby-plugin-sharp": "^2.9.0",
+    "gatsby-plugin-sitemap": "^2.7.0",
+    "gatsby-plugin-styled-components": "^3.5.0",
+    "gatsby-plugin-typescript": "^2.7.0",
+    "gatsby-remark-autolink-headers": "^2.6.0",
+    "gatsby-remark-images": "^3.6.0",
+    "gatsby-remark-katex": "^3.5.0",
+    "gatsby-source-filesystem": "^2.6.0",
     "gatsby-theme-material-ui": "^1.0.13",
-    "gatsby-transformer-remark": "^2.8.27",
-    "gatsby-transformer-sharp": "^2.5.1",
-    "katex": "^0.12.0",
+    "gatsby-transformer-remark": "^2.11.0",
+    "gatsby-transformer-sharp": "^2.7.0",
+    "hast-util-is-element": "^1.1.0",
+    "katex": "^0.10.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.14.0",
     "react-cookie": "^4.0.3",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0",
+    "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
+    "rehype-katex": "^4.0.0",
+    "rehype-remark": "^8.0.0",
+    "rehype-sanitize": "^4.0.0",
+    "rehype-stringify": "^8.0.0",
+    "remark": "^13.0.0",
+    "remark-parse": "^6.0.0",
+    "remark-rehype": "^8.0.0",
+    "remark-stringify": "^9.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^16.14.0",
+    "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-react": "^7.19.0",
-    "husky": "^4.2.5",
+    "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.0",
     "prettier": "2.0.5",
-    "typescript": "^3.9.3"
+    "remark-math": "^3.0.1",
+    "typescript": "^3.9.7"
   },
   "keywords": [
     "gatsby"
