--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-remark-autolink-headers": "^2.6.0",
     "gatsby-remark-images": "^3.6.0",
     "gatsby-remark-katex": "^3.5.0",
+    "gatsby-remark-unwrap-images": "^1.0.2",
     "gatsby-source-filesystem": "^2.6.0",
     "gatsby-theme-material-ui": "^1.0.13",
     "gatsby-transformer-remark": "^2.11.0",
