--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rehype-sanitize": "^4.0.0",
     "rehype-stringify": "^8.0.0",
     "remark": "^13.0.0",
+    "remark-html-katex": "^3.0.0",
     "remark-parse": "^6.0.0",
     "remark-rehype": "^8.0.0",
     "remark-stringify": "^9.0.0",
