--- a/package.json
+++ b/package.json
@@ -65,11 +65,16 @@
     "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
+    "babel-jest": "^26.6.3",
+    "babel-preset-gatsby": "^0.7.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
     "prettier": "2.0.5",
+    "react-test-renderer": "^17.0.1",
     "remark-math": "^3.0.1",
     "typescript": "^3.9.7"
   },
@@ -84,7 +89,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "test": "jest",
     "type-check": "tsc --noEmit",
     "lint": "eslint ."
   },
