--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@typescript-eslint/parser": "^2.34.0",
     "babel-jest": "^26.6.3",
     "babel-preset-gatsby": "^0.7.0",
+    "cypress": "^6.0.1",
     "eslint": "^6.8.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.21.5",
@@ -76,6 +77,7 @@
     "prettier": "2.0.5",
     "react-test-renderer": "^17.0.1",
     "remark-math": "^3.0.1",
+    "start-server-and-test": "^1.11.6",
     "typescript": "^3.9.7"
   },
   "keywords": [
