--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@typescript-eslint/parser": "^2.34.0",
     "babel-jest": "^26.6.3",
     "babel-preset-gatsby": "^0.7.0",
-    "cypress": "^6.0.1",
+    "cypress": "^6.1.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.21.5",
@@ -92,6 +92,9 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "jest",
+    "cy:open": "cypress open",
+    "test:e2e": "WAIT_ON_TIMEOUT=3600000 start-server-and-test develop http://localhost:8000 cy:open",
+    "test:e2e:ci": "WAIT_ON_TIMEOUT=3600000 start-server-and-test develop http://localhost:8000 cy:run",
     "type-check": "tsc --noEmit",
     "lint": "eslint ."
   },
@@ -102,9 +105,4 @@
   "bugs": {
     "url": "https://github.com/hoezithet/hzh_gatsby/issues"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run format && npm run lint"
-    }
-  }
 }
