--- a/package.json
+++ b/package.json
@@ -48,12 +48,13 @@
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "rehype-katex": "^4.0.0",
+    "rehype-react": "^6.1.0",
     "rehype-remark": "^8.0.0",
     "rehype-sanitize": "^4.0.0",
     "rehype-stringify": "^8.0.0",
     "remark": "^13.0.0",
     "remark-html-katex": "^3.0.0",
-    "remark-parse": "^6.0.0",
+    "remark-parse": "^9.0.0",
     "remark-rehype": "^8.0.0",
     "remark-stringify": "^9.0.0",
     "semantic-ui-css": "^2.4.1",
@@ -76,7 +77,7 @@
     "jest": "^26.6.3",
     "prettier": "2.0.5",
     "react-test-renderer": "^17.0.1",
-    "remark-math": "^3.0.1",
+    "remark-math": "^4.0.0",
     "start-server-and-test": "^1.11.6",
     "typescript": "^3.9.7"
   },
