--- a/.travis.yml
+++ b/.travis.yml
@@ -4,24 +4,21 @@ sudo: required
 language: node_js
 cache:
   directories:
-    - node_modules
+  - node_modules
 install:
-  - npm install
+- npm install
 script:
-  - gatsby build
+- gatsby build
 deploy:
-  - provider: script
-    skip_cleanup: true
-    script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/public root@167.86.92.134:/root/hoezithet/dev_public
-
-env:
-  global:
-    - PRODUCTION=true
+- provider: script
+  skip_cleanup: true
+  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/public root@167.86.92.134:/root/hoezithet/dev_public
 branches:
   only:
-    - master
-    - develop
+  - master
+  - develop
 notifications:
   slack: hoezithet:XvtMGEvLV8a37LQTUioGFVoa
 before_install:
-  - openssl aes-256-cbc -K $encrypted_db2095f63ba3_key -iv $encrypted_db2095f63ba3_iv -in deploy_rsa.enc -out deploy_rsa -d
+- openssl aes-256-cbc -K $encrypted_db2095f63ba3_key -iv $encrypted_db2095f63ba3_iv
+  -in deploy_rsa.enc -out deploy_rsa -d
