--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ deploy:
 - provider: script
   script: rsync -r --delete public root@167.86.92.134:/root/hoezithet/dev_public
   cleanup: false
+  skip_cleanup: true
   on:
     branch: develop
 addons:
