Delete after rsync travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 - gatsby build
 deploy:
   provider: script
-  script: rsync -r --delete $TRAVIS_BUILD_DIR/public root@167.86.92.134:/root/hoezithet/dev_public
+  script: rsync -r --delete-after $TRAVIS_BUILD_DIR/public root@167.86.92.134:/root/hoezithet/dev_public
   cleanup: false
   skip_cleanup: true
   on:
