--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,11 @@ deploy:
   edge: true
   on:
     branch: develop
+- provider: script
+  script: rsync -r --delete-after $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/public
+  edge: true
+  on:
+    branch: master
 addons:
   ssh_known_hosts: 167.86.92.134
 branches:
