--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
+    "react-swipeable-views": "^0.13.9",
     "rehype-katex": "^4.0.0",
     "rehype-react": "^6.1.0",
     "rehype-remark": "^8.0.0",
