--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "csstype": "^2.6.14",
     "fontsource-quicksand": "^2.2.6",
     "gatsby": "^2.27.0",
+    "gatsby-cli": "^3.1.0",
     "gatsby-image": "^2.6.0",
     "gatsby-plugin-catch-links": "^2.5.0",
     "gatsby-plugin-gdpr-cookies": "^1.0.10",
