--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Floris De Feyter",
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@mdx-js/mdx": "^1.6.21",
@@ -12,8 +13,11 @@
     "@types/mdx-js__react": "^1.5.3",
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.4",
+    "babel-plugin-remove-export-keywords": "^1.6.22",
     "babel-plugin-styled-components": "^1.12.0",
     "csstype": "^2.6.14",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "fontsource-quicksand": "^2.2.6",
     "gatsby": "^2.27.0",
     "gatsby-cli": "^3.1.0",
@@ -65,6 +69,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/react": "^16.14.0",
     "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
@@ -79,6 +84,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "prettier": "2.0.5",
+    "react-refresh": "^0.8.3",
     "react-test-renderer": "^17.0.1",
     "remark-math": "^3.0.1",
     "start-server-and-test": "^1.11.6",
