Install relevant visx packages

--- a/package.json
+++ b/package.json
@@ -13,6 +13,16 @@
     "@types/mdx-js__react": "^1.5.3",
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.4",
+    "@visx/axis": "^1.8.0",
+    "@visx/clip-path": "^1.7.0",
+    "@visx/curve": "^1.7.0",
+    "@visx/event": "^1.7.0",
+    "@visx/grid": "^1.9.1",
+    "@visx/group": "^1.7.0",
+    "@visx/scale": "^1.7.0",
+    "@visx/shape": "^1.8.0",
+    "@visx/text": "^1.7.0",
+    "@visx/tooltip": "^1.7.2",
     "babel-plugin-remove-export-keywords": "^1.6.22",
     "babel-plugin-styled-components": "^1.12.0",
     "csstype": "^2.6.14",
