--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@visx/event": "^1.7.0",
     "@visx/grid": "^1.9.1",
     "@visx/group": "^1.7.0",
+    "@visx/responsive": "^1.7.0",
     "@visx/scale": "^1.7.0",
     "@visx/shape": "^1.8.0",
     "@visx/text": "^1.7.0",
