--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "katex": "^0.10.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
+    "puppeteer": "^9.1.1",
     "react": "^16.14.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.14.0",
