--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,8 @@ before_deploy:
 - eval "$(ssh-agent -s)"
 - chmod 600 deploy_rsa
 - ssh-add deploy_rsa
+after_deploy:
+- node scripts/create_lesson_pdfs.js
 env:
   global:
     
