Add cli args to create_lesson_pdfs_pngs.js with minimist

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gsap": "npm:@gsap/shockingly@^3.6.0",
     "hast-util-is-element": "^1.1.0",
     "katex": "^0.10.0",
+    "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "puppeteer": "^9.1.1",
