--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-plugin-gdpr-cookies": "^1.0.10",
     "gatsby-plugin-google-tagmanager": "^2.6.0",
     "gatsby-plugin-gtag": "^1.0.13",
+    "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-mdx": "^1.5.0",
