--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "version": "0.1.0",
   "author": "Floris De Feyter",
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@babel/eslint-parser": "^7.14.3",
     "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": ">=4.0.0",
     "@mdx-js/mdx": "^1.6.21",
     "@mdx-js/react": "^1.6.21",
     "@types/mdx-js__react": "^1.5.3",
@@ -24,50 +27,54 @@
     "@visx/shape": "^1.8.0",
     "@visx/text": "^1.7.0",
     "@visx/tooltip": "^1.7.2",
+    "babel-eslint": "^10.0.0",
     "babel-plugin-remove-export-keywords": "^1.6.22",
     "babel-plugin-styled-components": "^1.12.0",
+    "core-js": "^3.0.0",
     "csstype": "^2.6.14",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "express-graphql": "^0.12.0",
     "fontsource-quicksand": "^2.2.6",
-    "gatsby": "^2.27.0",
+    "gatsby": "^3.0.0-next.0",
     "gatsby-cli": "^3.3.0",
-    "gatsby-image": "^2.6.0",
-    "gatsby-plugin-catch-links": "^2.5.0",
+    "gatsby-plugin-catch-links": "^3.5.0",
     "gatsby-plugin-gdpr-cookies": "^1.0.10",
-    "gatsby-plugin-google-tagmanager": "^2.6.0",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^1.5.0",
-    "gatsby-plugin-manifest": "^2.7.0",
+    "gatsby-plugin-manifest": "^3.5.0",
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-mdx": "^1.5.0",
-    "gatsby-plugin-offline": "^3.7.1",
-    "gatsby-plugin-react-helmet": "^3.5.0",
-    "gatsby-plugin-sass": "^2.6.0",
-    "gatsby-plugin-sharp": "^2.9.0",
-    "gatsby-plugin-sitemap": "^2.7.0",
-    "gatsby-plugin-styled-components": "^3.5.0",
-    "gatsby-plugin-typescript": "^2.7.0",
-    "gatsby-remark-autolink-headers": "^2.6.0",
-    "gatsby-remark-images": "^3.6.0",
-    "gatsby-remark-katex": "^3.5.0",
+    "gatsby-plugin-offline": "^4.5.1",
+    "gatsby-plugin-react-helmet": "^4.5.0",
+    "gatsby-plugin-sharp": "^3.0.0-next.0",
+    "gatsby-plugin-sitemap": "^4.1.0",
+    "gatsby-plugin-styled-components": "^4.5.0",
+    "gatsby-plugin-typescript": "^3.5.0",
+    "gatsby-remark-autolink-headers": "^4.2.0",
+    "gatsby-remark-images": "^5.2.1",
+    "gatsby-remark-katex": "^5.2.0",
     "gatsby-remark-unwrap-images": "^1.0.2",
-    "gatsby-source-filesystem": "^2.6.0",
+    "gatsby-source-filesystem": "^3.0.0-next.0",
     "gatsby-theme-material-ui": "^1.0.13",
-    "gatsby-transformer-remark": "^2.11.0",
-    "gatsby-transformer-sharp": "^2.7.0",
+    "gatsby-transformer-remark": "^4.2.0",
+    "gatsby-transformer-sharp": "^3.5.0",
     "glob": "^7.1.7",
+    "graphql": "^14.4.1",
     "gsap": "npm:@gsap/shockingly@^3.6.0",
     "hast-util-is-element": "^1.1.0",
-    "katex": "^0.10.0",
+    "katex": "^0.12.0",
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "puppeteer": "^9.1.1",
-    "react": "^16.14.0",
+    "react": "^16.3.0-0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
+    "react-is": ">= 16.8.0",
     "react-swipeable-views": "^0.13.9",
     "rehype-katex": "^4.0.0",
     "rehype-react": "^6.1.0",
@@ -81,18 +88,18 @@
     "remark-stringify": "^9.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "webpack": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/react": "^16.14.0",
     "@types/react-dom": "^16.9.9",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@typescript-eslint/eslint-plugin": "^4.0.0",
+    "@typescript-eslint/parser": "^4.0.0",
     "babel-jest": "^26.6.3",
     "babel-preset-gatsby": "^0.7.0",
-    "cypress": "^6.1.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.5.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.0",
@@ -100,7 +107,6 @@
     "jest": "^26.6.3",
     "prettier": "2.0.5",
     "react-refresh": "^0.8.3",
-    "react-test-renderer": "^17.0.1",
     "remark-math": "^3.0.1",
     "start-server-and-test": "^1.11.6",
     "typescript": "^3.9.7"
@@ -129,5 +135,12 @@
   },
   "bugs": {
     "url": "https://github.com/hoezithet/hzh_gatsby/issues"
+  },
+  "peerDependencies": {
+    "@babel/core": "^7.11.6",
+    "@material-ui/styles": ">=4.0.0",
+    "core-js": "^3.0.0",
+    "react-is": ">= 16.8.0",
+    "webpack": "^4.0.0 || ^5.0.0"
   }
 }
