--- a/package.json
+++ b/package.json
@@ -128,10 +128,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hoezithet/hzh_gatsby"
+    "url": "https://github.com/hoezithet/hoezithet"
   },
   "bugs": {
-    "url": "https://github.com/hoezithet/hzh_gatsby/issues"
+    "url": "https://github.com/hoezithet/hoezithet/issues"
   },
   "peerDependencies": {
     "@babel/core": "^7.11.6",
