--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ node_js:
 before_install:
 - npm config set //npm.greensock.com/:_authToken=$GSAP_TOKEN
 - npm config set @gsap:registry=https://npm.greensock.com
-- yarn add gsap@npm:@gsap/shockingly
+install:
+- yarn install --verbose
+cache:
+  yarn: true
 script:
 - gatsby build
 deploy:
