--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 - npm config set @gsap:registry=https://npm.greensock.com
 install:
 - yarn add gsap@npm:@gsap/shockingly
+- yarn add puppeteer
 - yarn install
 cache:
   yarn: true
