--- a/.travis.yml
+++ b/.travis.yml
@@ -5,46 +5,43 @@ node_js:
 - 14
 
 before_install:
-- npm config set //npm.greensock.com/:_authToken=$GSAP_TOKEN
-- npm config set @gsap:registry=https://npm.greensock.com
+  - npm config set //npm.greensock.com/:_authToken=$GSAP_TOKEN
+  - npm config set @gsap:registry=https://npm.greensock.com
+  - yarn add gsap@npm:@gsap/shockingly
 install:
-- yarn add gsap@npm:@gsap/shockingly
-- yarn install
+  - yarn install
 cache:
   yarn: true
 script:
-- gatsby build
+  - gatsby build
 deploy:
-- provider: script
-  script: rsync -r --delete-after $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/dev_public
-  edge: true
-  on:
-    branch: develop
-- provider: script
-  script: yarn add puppeteer && node scripts/create_lesson_pdfs_pngs.js --host=dev.hoezithet.nu --cwd=$TRAVIS_BUILD_DIR
-  on:
-    branch: develop
-- provider: script
-  script: rsync -r --delete-after $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/dev_public
-  edge: true
-  on:
-    branch: develop
-
-- provider: script
-  script: rsync -r --delete-after $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/public
-  edge: true
-  on:
-    branch: master
-- provider: script
-  script: yarn add puppeteer &&  node scripts/create_lesson_pdfs_pngs.js --host=hoezithet.nu --cwd=$TRAVIS_BUILD_DIR
-  on:
-    branch: master
-- provider: script
-  script: rsync -r --delete-after $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/public
-  edge: true
-  on:
-    branch: master
-
+  skip_cleanup: true
+  - provider: script
+    script: rsync -r $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/dev_public
+    on:
+      branch: develop
+  - provider: script
+    script: node scripts/create_lesson_pdfs_pngs.js --host=dev.hoezithet.nu --cwd=$TRAVIS_BUILD_DIR
+    on:
+      branch: develop
+  - provider: script
+    script: rsync -r $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/dev_public
+    on:
+      branch: develop
+  
+  - provider: script
+    script: rsync -r $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/public
+    on:
+      branch: master
+  - provider: script
+    script: node scripts/create_lesson_pdfs_pngs.js --host=hoezithet.nu --cwd=$TRAVIS_BUILD_DIR
+    on:
+      branch: master
+  - provider: script
+    script: rsync -r $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/public
+    on:
+      branch: master
+  
 addons:
   ssh_known_hosts: 167.86.92.134
 branches:
