--- a/.travis.yml
+++ b/.travis.yml
@@ -5,43 +5,46 @@ node_js:
 - 14
 
 before_install:
-  - npm config set //npm.greensock.com/:_authToken=$GSAP_TOKEN
-  - npm config set @gsap:registry=https://npm.greensock.com
-  - yarn add gsap@npm:@gsap/shockingly
+- npm config set //npm.greensock.com/:_authToken=$GSAP_TOKEN
+- npm config set @gsap:registry=https://npm.greensock.com
 install:
-  - yarn install
+- yarn add gsap@npm:@gsap/shockingly
+- yarn install
 cache:
   yarn: true
 script:
-  - gatsby build
+- gatsby build
 deploy:
-  skip_cleanup: true
-  - provider: script
-    script: rsync -r $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/dev_public
-    on:
-      branch: develop
-  - provider: script
-    script: node scripts/create_lesson_pdfs_pngs.js --host=dev.hoezithet.nu --cwd=$TRAVIS_BUILD_DIR
-    on:
-      branch: develop
-  - provider: script
-    script: rsync -r $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/dev_public
-    on:
-      branch: develop
-  
-  - provider: script
-    script: rsync -r $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/public
-    on:
-      branch: master
-  - provider: script
-    script: node scripts/create_lesson_pdfs_pngs.js --host=hoezithet.nu --cwd=$TRAVIS_BUILD_DIR
-    on:
-      branch: master
-  - provider: script
-    script: rsync -r $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/public
-    on:
-      branch: master
-  
+- provider: script
+  script: rsync -r --delete-after $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/dev_public
+  edge: true
+  on:
+    branch: develop
+- provider: script
+  script: node scripts/create_lesson_pdfs_pngs.js --host=dev.hoezithet.nu --cwd=$TRAVIS_BUILD_DIR
+  edge: true
+  on:
+    branch: develop
+- provider: script
+  script: rsync -r --delete-after $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/dev_public
+  edge: true
+  on:
+    branch: develop
+- provider: script
+  script: rsync -r --delete-after $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/public
+  edge: true
+  on:
+    branch: master
+- provider: script
+  script: node scripts/create_lesson_pdfs_pngs.js --host=hoezithet.nu --cwd=$TRAVIS_BUILD_DIR
+  edge: true
+  on:
+    branch: master
+- provider: script
+  script: rsync -r --delete-after $TRAVIS_BUILD_DIR/public/ root@167.86.92.134:/root/hoezithet/public
+  edge: true
+  on:
+    branch: master
 addons:
   ssh_known_hosts: 167.86.92.134
 branches:
