--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-is": ">= 16.8.0",
+    "react-redux": "^7.2.4",
     "react-swipeable-views": "^0.13.9",
+    "redux": "^4.0.0",
     "rehype-katex": "^4.0.0",
     "rehype-react": "^6.1.0",
     "rehype-remark": "^8.0.0",
@@ -105,6 +107,7 @@
     "prettier": "2.0.5",
     "puppeteer": "^9.1.1",
     "react-refresh": "^0.8.3",
+    "redux-devtools": "^3.7.0",
     "remark-math": "^3.0.1",
     "start-server-and-test": "^1.11.6",
     "typescript": "^3.9.7"
